adjusted size on intro text, fixed paragraph shift on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -17,14 +17,17 @@ body {
   background-size: cover;
 }
 
-.home-ani{
-  font-size: 80px;
+.home-ani {
+  font-size: 45px;
   background: url('assets/images/websitebg.jpeg') no-repeat center fixed;
   background-size: cover;
   font-weight: 900;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-font-smoothing: antialiased;
+}
+.text-animation {
+  font-size: 20px;
 }
 
 code {
@@ -158,4 +161,7 @@ code {
         transform: translate(-50%, -50%);
     }
 
+        .text-ani {
+          font-size: 40px;
+        }
 }
